class BlackJack {
/*int[] cardPlayer=new int[5];
int[] cardComputer=new int[5];
String[] playerHand = new String[5];
String[] computerHand = new String[5];
Scanner input= new Scanner(System.in);
int x,y,j;
for(int i=0;i<2;i++;)
*/
}
