
public class Card {
int value, type;
String name;
Cards cardReal = new Cards();{
value = cardReal.cardDealtValue();
type = cardReal.cardDealtType();
}
}